# Thermal-FIST

./: README.md  macro.tar.xz
1807.02079/macro/: Fig1.C  eng_dep.cc
1807.02079/macro/inc/: TAliFigs.h
1807.02079/src/: 1807.02079.Fits.cpp  1807.02079.TDep.cpp
1906.03145/: CMakeLists.txt
1906.03145/macro/: Fig1.C  Fig2.C
1906.03145/macro/figure/eps/: Fig1.eps
1906.03145/macro/inc/: TAliFigs.h  ThermalFistUtil.h
1906.03145/src/: 1906.03145.1.cpp  1906.03145.2.cpp  1906.03145.3.cpp  1906.03145.4.cpp  CMakeLists.txt
1906.03145/src/inc/: loadFist.h
Eigen/: aaa  bbb  s2.cpp  s2r.cpp
Thermal-FIST/include/HRGFit/: .ThermalModelFit.h.swp
Thermal-FIST/src/examples/cpc/: .cpc4-mcHRG.cpp.swp
macro/: Fig4a.C  Fig4b.C  Fig5.C  test1.c
macro/1807.02079/: Fig1.C
macro/1807.02079/build-fig1-Desktop-Debug/: CMakeCache.txt  Makefile  cmake_install.cmake  fig1
macro/1807.02079/build-fig1-Desktop-Debug/.cmake/api/v1/reply/: cache-v2-5af08e72e39730bde8c8.json  cmakeFiles-v1-c0fb24520a218db28df6.json  codemodel-v2-2f2a9e88e1ee15a9f1de.json  index-2020-12-01T01-42-37-0517.json  target-fig1-Debug-5a3b209fa86145d57c0c.json  target-fig1_autogen-Debug-507f149a50e8bcfd02da.json
macro/1807.02079/fig1/: CMakeLists.txt
macro/dat/: cpc1.EV-HRG.TDep.out  cpc1.Id-HRG.TDep.out  cpc1.QvdW-HRG.TDep.out
macro/figure/eps/: Fig4a.eps  Fig4b.eps  Fig5.eps
macro/inc/: ThermalFistUtil.h
